# tdk_peace_and_joy

./: README.md
catkin_ws/devel/lib/pkgconfig/: rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc
catkin_ws/devel/lib/rosserial_arduino/: serial_node.py
catkin_ws/devel/lib/rosserial_client/: make_libraries  make_library.py
catkin_ws/devel/lib/rosserial_embeddedlinux/: make_libraries.py
catkin_ws/devel/lib/rosserial_mbed/: make_libraries.py
catkin_ws/devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
catkin_ws/devel/lib/rosserial_windows/: make_libraries.py
catkin_ws/devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
catkin_ws/devel/share/rosserial_chibios/: make_libraries.py
catkin_ws/devel/share/rosserial_chibios/cmake/: rosserial_chibiosConfig.cmake
catkin_ws/devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
catkin_ws/devel/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
catkin_ws/devel/share/rosserial_mbed/cmake/: rosserial_mbed-msg-paths.cmake  rosserial_mbedConfig.cmake
catkin_ws/devel/share/rosserial_msgs/cmake/: rosserial_msgs-msg-paths.cmake  rosserial_msgsConfig.cmake
catkin_ws/devel/share/rosserial_python/cmake/: rosserial_pythonConfig.cmake
catkin_ws/devel/share/rosserial_server/cmake/: rosserial_serverConfig.cmake
catkin_ws/devel/share/rosserial_test/cmake/: rosserial_testConfig.cmake
catkin_ws/devel/share/rosserial_tivac/cmake/: rosserial_tivac-extras.cmake  rosserial_tivacConfig.cmake
catkin_ws/devel/share/rosserial_vex_cortex/: make_libraries.py
catkin_ws/devel/share/rosserial_vex_cortex/cmake/: rosserial_vex_cortexConfig.cmake
catkin_ws/devel/share/rosserial_vex_v5/cmake/: rosserial_vex_v5Config.cmake
catkin_ws/devel/share/rosserial_windows/cmake/: rosserial_windowsConfig.cmake
catkin_ws/devel/share/rosserial_xbee/cmake/: rosserial_xbeeConfig.cmake
catkin_ws/src/: CMakeLists.txt  stm32_bridge.py
catkin_ws/src/rosserial_server/include/rosserial_server/: session.h
docker/: Dockerfile  bridge.yml  compose.yml  start-bridge.sh
ros2_ws/: plot_path.plt  ui_demo.py
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/camera/lib/camera/: arm  coffee1  transform
ros2_ws/install/camera/share/camera/: package.sh
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: package.sh
ros2_ws/install/navigation/lib/navigation/: chassis_controller  check_point_4
ros2_ws/install/navigation/share/navigation/: local_setup.sh  package.sh  package.xml
ros2_ws/install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
ros2_ws/install/realsense2_camera/share/realsense2_camera/: package.sh
ros2_ws/install/realsense2_camera_msgs/share/realsense2_camera_msgs/: package.sh
ros2_ws/install/realsense2_description/share/realsense2_description/: package.sh
ros2_ws/install/rospi_pre/include/rospi_pre/: rospi_pre.hpp
ros2_ws/install/rospi_pre/share/rospi_pre/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/camera/: CMakeLists.txt
ros2_ws/src/camera/include/camera/: algorithm.hpp
ros2_ws/src/camera/launch/: launch.xml
ros2_ws/src/camera/src/: TFsetup.cpp  arm.cpp  coffee1.cpp  coffee2.cpp  imread.cpp  orange.cpp  transform.cpp
ros2_ws/src/navigation/: CMakeLists.txt
ros2_ws/src/navigation/launch/: multi.launch.py
ros2_ws/src/navigation/rviz/: check_point_4.rviz
ros2_ws/src/navigation/src/: chassis_controller.cpp  check_point_4.cpp  fourth_chassis.cpp  plot_path.plt  sim
ros2_ws/src/navigation/waypoints/: center_path.csv
ros2_ws/src/realsense-pkg/realsense2_camera/launch/: rs_launch.py
ros2_ws/src/rospi_pre/: CMakeLists.txt
ros2_ws/src/rospi_pre/include/rospi_pre/: visibility_control.h
ros2_ws/src/rospi_pre/src/: rospi_pre.cpp
ros2_ws/src/rospi_pre/srv/: ChassisManager.srv
ros2_ws/src/tool/: bridge.py  cam_trigger.py  cmd_vel_serial_bridge.py  new_ui.py  send_mode.py  stm32_bridge.py  stm_logger.py  two_stm_bridge.py  ui_demo.py
(+42 files in other folders)
